--- a/package.json
+++ b/package.json
@@ -10,9 +10,22 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@popperjs/core": "^2.10.2",
         "axios": "^0.25",
+        "bootstrap": "^5.1.3",
+        "browser-sync-webpack-plugin": "^2.3.0",
+        "browser-sync": "^2.27.10",
         "laravel-mix": "^6.0.6",
         "lodash": "^4.17.19",
-        "postcss": "^8.1.14"
+        "postcss": "^8.1.14",
+        "resolve-url-loader": "^3.1.2",
+        "sass": "^1.32.11",
+        "sass-loader": "^11.0.1",
+        "vue": "^2.6.12",
+        "vue-loader": "^15.10.0",
+        "vue-template-compiler": "^2.6.12"
+    },
+    "dependencies": {
+        
     }
 }
